--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Git </title>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    Here is how you can reach us...
+    <h2?>Git </h2>
 </body>
 </html>
